# artixinstall

./: .gitignore  LICENSE  README.md  pyproject.toml
artixinstall/: __init__.py  __main__.py
artixinstall/data/: locales.txt  mirrors.txt  services.json
artixinstall/installer/: __init__.py  base.py  bootloader.py  desktop.py  disk.py  hardware.py  init.py  locale.py  network.py  packages.py  users.py
artixinstall/tui/: __init__.py  menu.py  prompts.py  screen.py
artixinstall/utils/: __init__.py  log.py  shell.py  validate.py
